--- a/main.ipynb
+++ b/main.ipynb
@@ -793,7 +793,8 @@
    "outputs": [],
    "source": [
     "img = Image.open(\"images/face.jpg\").convert('L')\n",
-    "magnifiedImg = linearInterpolation(img)\n"
+    "magnifiedImg = linearInterpolation(img)\n",
+    "\n"
    ]
   },
   {
